CI: Run ASV on Travis for failed benchmarks
create asv.sh

add to travis

Changed file permission

Add else statement and asv machine config

move to separate travis build

CI: Run ASV on Travis for failed benchmarks

create asv.sh

add to travis

move to separate travis build

Change build order and change to asv dev

Put asv before doc

Fix some failing benchmarks

Grep for failed benchmarks

Add travis wait

Don't grep output yet

Remove travis_wait for now

fix some benchmarks

Now grep output

add travis wait 40 to ci/asv.sh

Add tee

Remove wait

Start catching warnings

catch more warnings

Fix ci strategy

Remove rolling_* from gil.py

catch more warnings

Add back rolling methods for older releases

simplify rolling setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,10 @@ matrix:
     # In allow_failures
     - dist: trusty
       env:
+        - JOB="3.6_ASV" ASV=true
+    # In allow_failures
+    - dist: trusty
+      env:
         - JOB="3.6_DOC" DOC=true
     allow_failures:
       - dist: trusty
@@ -93,6 +97,9 @@ matrix:
       - dist: trusty
         env:
           - JOB="3.6_NUMPY_DEV" TEST_ARGS="--skip-slow --skip-network" PANDAS_TESTING_MODE="deprecate"
+      - dist: trusty
+        env:
+          - JOB="3.6_ASV" ASV=true
       - dist: trusty
         env:
           - JOB="3.6_DOC" DOC=true
@@ -128,6 +135,7 @@ script:
   - ci/script_single.sh
   - ci/script_multi.sh
   - ci/lint.sh
+  - ci/asv.sh
   - echo "checking imports"
   - source activate pandas && python ci/check_imports.py
   - echo "script done"
