Working avg tiebreak with nan handling

--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -444,7 +444,6 @@ def group_nth_{{name}}(ndarray[{{dest_type2}}, ndim=2] out,
                 else:
                     out[i, j] = resx[i, j]
 
-
 @cython.boundscheck(False)
 @cython.wraparound(False)
 def group_rank_{{name}}(ndarray[{{dest_type2}}, ndim=2] out,
@@ -455,27 +454,35 @@ def group_rank_{{name}}(ndarray[{{dest_type2}}, ndim=2] out,
     Only transforms on axis=0
     """
     cdef:
+        int tiebreak
         Py_ssize_t i, j, N, K
-        int64_t lab, idx, counter=1
+        int64_t val_start=0, grp_start=0, dups=0, sum_ranks=0
         ndarray[int64_t] _as
 
+    tiebreak = tiebreakers[kwargs['ties_method']]
     N, K = (<object> values).shape
 
     _as = np.lexsort((values[:, 0], labels))
 
     with nogil:
         for i in range(N):
-            idx = _as[i]
-            lab = labels[idx]
-            if i > 0 and lab == labels[_as[i-1]]:
-                counter += 1
-            else:
-                counter = 1
-            if lab < 0:
-                continue
+            dups += 1
+            sum_ranks += i - grp_start + 1
 
-            for j in range(K):
-                out[idx, j] = counter
+            if tiebreak == TIEBREAK_AVERAGE:
+                for j in range(i - dups + 1, i + 1):
+                    out[_as[j], 0] = sum_ranks / dups
+
+            if (i == N - 1 or (
+                    (values[_as[i], 0] != values[_as[i+1], 0]) and not
+                    (isnan(values[_as[i], 0]) and
+                     isnan(values[_as[i+1], 0])
+                    ))):
+                dups = sum_ranks = 0
+                val_start = i
+
+            if i == 0 or labels[_as[i]] != labels[_as[i-1]]:
+                grp_start = i
 
 {{endfor}}
 
