--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -444,6 +444,7 @@ def group_nth_{{name}}(ndarray[{{dest_type2}}, ndim=2] out,
                 else:
                     out[i, j] = resx[i, j]
 
+
 @cython.boundscheck(False)
 @cython.wraparound(False)
 def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
@@ -458,8 +459,10 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
         Py_ssize_t i, j, N, K
         int64_t val_start=0, grp_start=0, dups=0, sum_ranks=0
         ndarray[int64_t] _as
+        bint pct
 
     tiebreak = tiebreakers[kwargs['ties_method']]
+    pct = kwargs['pct']
     N, K = (<object> values).shape
 
     _as = np.lexsort((values[:, 0], labels))
@@ -495,8 +498,11 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
                 dups = sum_ranks = 0
                 val_start = i
 
-            if i == 0 or labels[_as[i]] != labels[_as[i-1]]:
-                grp_start = i
+            if i == N - 1 or labels[_as[i]] != labels[_as[i+1]]:
+                if pct:
+                    for j in range(grp_start, i + 1):
+                        out[_as[j], 0] = out[_as[j], 0] / (i - grp_start + 1)
+                grp_start = i + 1
 
 {{endfor}}
 
