--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -459,13 +459,17 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
         Py_ssize_t i, j, N, K
         int64_t val_start=0, grp_start=0, dups=0, sum_ranks=0
         ndarray[int64_t] _as
-        bint pct
+        bint pct, ascending
 
     tiebreak = tiebreakers[kwargs['ties_method']]
+    ascending = kwargs['ascending']
     pct = kwargs['pct']
     N, K = (<object> values).shape
 
     _as = np.lexsort((values[:, 0], labels))
+
+    if not ascending:
+        _as = _as[::-1]
 
     with nogil:
         for i in range(N):
@@ -483,10 +487,10 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
                     out[_as[j], 0] = i - grp_start + 1
             elif tiebreak == TIEBREAK_FIRST:
                 for j in range(i - dups + 1, i + 1):
-                    out[_as[j], 0] = j + 1
-            elif tiebreak == TIEBREAK_FIRST_DESCENDING:
-                for j in range(i - dups + 1, i + 1):
-                   out[_as[j], 0]  = 2 * (i - grp_start) - j - dups + 2
+                    if ascending:
+                        out[_as[j], 0] = j + 1
+                    else:
+                        out[_as[j], 0] = 2 * i - j - dups + 2
             elif tiebreak == TIEBREAK_DENSE:
                 for j in range(i - dups + 1, i + 1):
                     out[_as[j], 0] = val_start - grp_start
