--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ parentdir_prefix = pandas-
 ignore =
     E402,  # module level import not at top of file
     E731,  # do not assign a lambda expression, use a def
-    E741,  # do not use variables named ‘l’, ‘O’, or ‘I’
+    E741,  # do not use variables named 'l', 'O', or 'I'
     W503   # line break before binary operator
 max-line-length = 79
 
