--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,11 @@ tag_prefix = v
 parentdir_prefix = pandas-
 
 [flake8]
-ignore = E731,E402,W503
+ignore =
+    E402,  # module level import not at top of file
+    E731,  # do not assign a lambda expression, use a def
+    E741,  # do not use variables named 'l', 'O', or 'I'
+    W503   # line break before binary operator
 max-line-length = 79
 
 [yapf]
