--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -520,9 +520,9 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
                 elif tiebreak == TIEBREAK_FIRST:
                     for j in range(i - dups + 1, i + 1):
                         if ascending:
-                            out[_as[j], 0] = j + 1
+                            out[_as[j], 0] = j + 1 - grp_start
                         else:
-                            out[_as[j], 0] = 2 * i - j - dups + 2
+                            out[_as[j], 0] = 2 * i - j - dups + 2 - grp_start
                 elif tiebreak == TIEBREAK_DENSE:
                     for j in range(i - dups + 1, i + 1):
                         out[_as[j], 0] = vals_seen
