--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -14,14 +14,14 @@ requirements:
   build:
     - python
     - cython
-    - {{ pin_compatible('numpy', max_pin='1.14') }}
+    - numpy
     - setuptools >=3.3
     - python-dateutil >=2.5.0
     - pytz
 
   run:
     - python
-    - {{ pin_compatible('numpy', max_pin='1.14') }}
+    - numpy
     - python-dateutil >=2.5.0
     - pytz
 
