GroupBy Rank SegFault Fix - astype instead of view (#19701)
* Use astype instead of view for lexsort upcasting

* Added copy=False to astype in group_rank

--- a/pandas/_libs/groupby_helper.pxi.in
+++ b/pandas/_libs/groupby_helper.pxi.in
@@ -531,7 +531,7 @@ def group_rank_{{name}}(ndarray[float64_t, ndim=2] out,
     # each label corresponds to a different group value,
     # the mask helps you differentiate missing values before
     # performing sort on the actual values
-    _as = np.lexsort(order).view(dtype=np.int64)
+    _as = np.lexsort(order).astype(np.int64, copy=False)
 
     if not ascending:
         _as = _as[::-1]
