added .pytest_cache to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ Thumbs.db
 pandas/io/*.dat
 pandas/io/*.json
 scikits
+#cache files
+*.pytest_cache
 
 # Generated Sources #
 #####################
