--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,4 @@ markers =
     slow: mark a test as slow
     network: mark a test as network
     high_memory: mark a test as a high-memory only
+addopts = --strict-data-files
