DOC: Try out sphinx_remove_toctrees

--- a/environment.yml
+++ b/environment.yml
@@ -90,6 +90,7 @@ dependencies:
   - sphinx
   - sphinx-design
   - sphinx-copybutton
+  - sphinx-remove-toctrees
   - types-python-dateutil
   - types-PyMySQL
   - types-pytz
