Set defaults for `devcontainer` Visual Studio Code IDE to indent with 4 spaces.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,9 @@
 	"customizations": {
 		"vscode": {
 			"settings": {
+				"editor.tabSize": 4,
+				"editor.insertSpaces": true,
+				"editor.detectIndentation": false,
 				"terminal.integrated.defaultProfile.linux": "bash",
 				"python.formatting.provider": "black",
 				"python.linting.enabled": true,
